Fix sidebar wrong size
Removed shrink from sidebar to be able to control
it's width in the viewport.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -48,9 +48,12 @@ a {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  flex-flow: column nowrap;
+  flex: 1 0 300px;
 }
 
-.cardbox  {
+.cardbox {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
